# Collatz_Sequence_Program

./: README.md
Interface/: IProgram.h
Program_1/: CMakeLists.txt  Program_1.cpp  Program_1.h  main.cpp
Program_2/: CMakeLists.txt  Program_2.cpp  Program_2.h  main.cpp
